--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,9 @@ upstream config {
 }
 server {
     listen 80;
-    client_max_body_size 100M;
+    client_max_body_size 10M;
+    client_body_buffer_size 10M;
+    
     location / {
         proxy_pass http://config;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
