--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,29 @@
+arabic-reshaper==2.1.3
 asgiref==3.4.1; python_version >= "3.6"
+chardet==4.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+django-excel==0.0.10
 django-multiselectfield==0.1.12
 django-widget-tweaks==1.4.8
 django==3.2.5; python_version >= "3.6"
+et-xmlfile==1.1.0; python_version >= "3.6"
+future==0.18.2; python_version >= "2.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 gunicorn==20.1.0; python_version >= "3.5"
+html5lib==1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+lml==0.1.0; python_version >= "3.6"
+openpyxl==3.0.9; python_version >= "3.6"
 pillow==8.3.1; python_version >= "3.6"
 psycopg2==2.9.1; python_version >= "3.6"
+pyexcel-io==0.6.4; python_version >= "3.6"
+pyexcel-webio==0.1.4
+pyexcel-xlsx==0.6.0; python_version >= "3.6"
+pyexcel==0.6.7; python_version >= "3.6"
+pypdf2==1.26.0
+python-bidi==0.4.2
 pytz==2021.1; python_version >= "3.6"
+reportlab==3.6.1; python_version >= "3.6" and python_version < "4"
+six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 sqlparse==0.4.1; python_version >= "3.6"
+texttable==1.6.4; python_version >= "3.6"
+webencodings==0.5.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+xhtml2pdf==0.2.5
+xlsxwriter==3.0.1; python_version >= "3.4"
